2007-01-09 [paul]	0.15.5

	0.15.5 released

2006-12-15 [ticho]	0.15.4cvs1

	* configure.ac
	* src/plugin.c
		Use check_plugin_version() for version check.

2006-12-04 [paul]	0.15.4

	0.15.4 released

2006-11-28 [paul]	0.15.3cvs3

	* configure.ac
		bump required version of Claws
		following renaming
		Thanks to Charles Edwards for the
		reminder

2006-11-27 [paul]	0.15.3cvs2

	* README
	* debian/README.Debian
	* src/etpan_privacy.c
	* src/plugin.c
		renaming

2006-11-07 [paul]	0.15.3cvs1

	* ChangeLog
	* README
	* configure.ac
	* debian/README.Debian
	* debian/changelog
	* debian/control
	* debian/copyright
	* debian/files
	* debian/rules
	* src/Makefile.am
	* src/etpan_privacy.c
	* src/etpan_privacy.h
	* src/plugin.c
		Name change

2006-09-25 [paul]	0.15.3

	0.15.3 released

2006-09-22 [ticho]	0.15.2cvs4

	* configure.ac
		Update required claws-mail version to 2.4.0.200.

2006-09-01 [wwp]	0.15.2cvs3

	* commitHelper
		sync w/ commitHelper in claws-mail module:
		use CVSEDITOR env. var. if set.

2006-08-27 [colin]	0.15.2cvs2

	* src/plugin.c
		Implement plugin_provides()

2006-08-18 [paul]	0.15.2cvs1

	* configure.ac
		bump up GLib and GTK+ minimum required versions,
		following Claws

2006-08-02 [paul]	0.15.2

	0.15.2 released

2006-06-28 [colin]	0.15.1cvs1

	* configure.ac
		Fix bug #975 (etpan-privacy does not respect 
		LDFLAGS properly). Patch by
		Sascha Geschwandtner <s.geschwandtner@gmx.de>

2006-06-12 [paul]	0.15.1

	0.15.1 released

2006-06-06 [wwp]	0.15.0cvs2

	* configure.ac
	* src/Makefile.am
	* src/plugin_version.h.in
	* src/plugin.c
	* src/.cvsignore
		fix/unify/simplify autostuff, get rid of src/plugin_version.h{,.in} (use pluginconfig.h instead).

2006-06-03 [wwp]	0.15.0cvs1

	* commitHelper
	* PATCHSETS
	* configure.ac
		introducing commitHelper for plugins too.

2006-06-03 [wwp]	0.15.0cvs1

	* PATCHSETS
	* configure.ac
		introducing commitHelper for plugins too.

2006-05-17 [wwp] 0.15

	* src/plugin.c
		Updated claws-mail product name.
