@@ -10,3 +10,4 @@
 ( cvs diff -u -r 1.3.2.3 -r 1.3.2.4 README;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 debian/README.Debian;  cvs diff -u -r 1.7.2.4 -r 1.7.2.5 src/etpan_privacy.c;  cvs diff -u -r 1.1.1.1.2.8 -r 1.1.1.1.2.9 src/plugin.c;  ) > 0.15.3cvs2.patchset
 ( cvs diff -u -r 1.9.2.22 -r 1.9.2.23 configure.ac;  ) > 0.15.3cvs3.patchset
 ( cvs diff -u -r 1.9.2.24 -r 1.9.2.25 configure.ac;  cvs diff -u -r 1.1.1.1.2.9 -r 1.1.1.1.2.10 src/plugin.c;  ) > 0.15.4cvs1.patchset
+( cvs diff -u -r 1.1.1.1.2.10 -r 1.1.1.1.2.11 src/plugin.c;  ) > 0.15.5cvs1.patchset
